@@ -1,7 +1,7 @@
 '''
-**************************************
-A Python package for quantum chemistry
-**************************************
+*****************************************************
+PySCF Python-based simulations of chemistry framework
+*****************************************************
 
 How to use
 ----------
